# SplitWatch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
.github/worklflows/: release.yaml
docs/: split-watch-rust-tutorial.md
examples/: custom-theme.toml  gpu-dev.toml  logs.toml  train-debug.toml
src/: app.rs  cli.rs  layout.rs  lib.rs  main.rs  preset.rs  theme.rs  tui.rs  vars.rs
src/app/: input.rs  runner.rs  state.rs
src/tui/: actions.rs  ansi.rs  dashboard.rs  helpers.rs  modals.rs  status.rs  widgets.rs
