[package]
name = "split"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
directories = "6.0"
ratatui = "0.29"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[dev-dependencies]
tempfile = "3.15"
